使用 Colaboratory 创建

--- a/facerecognition.ipynb
+++ b/facerecognition.ipynb
@@ -6,7 +6,7 @@
       "name": "facerecognition",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPNlicqI3SpraCHHUFitOVP",
+      "authorship_tag": "ABX9TyMxVkCQl4arjUMKM10I3Gwk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,21 +30,29 @@
       "metadata": {
         "id": "jo4H72yXovwp",
         "colab_type": "code",
-        "outputId": "89822e7b-87db-46d3-d41d-f24b687f0e51",
+        "outputId": "f9001463-6836-49c0-a838-7e9fcbbd98b8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 151
         }
       },
       "source": [
-        "!pip install dlib"
+        "!pip install dlib\n",
+        "!pip3 install face_recognition"
       ],
-      "execution_count": 0,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: dlib in /usr/local/lib/python3.6/dist-packages (19.18.0)\n"
+            "Requirement already satisfied: dlib in /usr/local/lib/python3.6/dist-packages (19.18.0)\n",
+            "Requirement already satisfied: face_recognition in /usr/local/lib/python3.6/dist-packages (1.3.0)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from face_recognition) (1.18.4)\n",
+            "Requirement already satisfied: face-recognition-models>=0.3.0 in /usr/local/lib/python3.6/dist-packages (from face_recognition) (0.3.0)\n",
+            "Requirement already satisfied: Click>=6.0 in /usr/local/lib/python3.6/dist-packages (from face_recognition) (7.1.2)\n",
+            "Requirement already satisfied: Pillow in /usr/local/lib/python3.6/dist-packages (from face_recognition) (7.0.0)\n",
+            "Requirement already satisfied: dlib>=19.7 in /usr/local/lib/python3.6/dist-packages (from face_recognition) (19.18.0)\n",
+            "Requirement already satisfied: Cython in /usr/local/lib/python3.6/dist-packages (0.29.18)\n"
           ],
           "name": "stdout"
         }
@@ -55,7 +63,7 @@
       "metadata": {
         "id": "MNGQE4sbo1MN",
         "colab_type": "code",
-        "outputId": "a7e41afc-c2c7-4863-8559-9c1228014611",
+        "outputId": "fc3afee5-5c5b-4a2e-f7b7-8495b99f717e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
@@ -69,7 +77,7 @@
         "# !cd images; wget -nc https://raw.githubusercontent.com/lovellbrian/ELEC4630/master/Images/two_people.jpg\n",
         "!cd images; wget -nc https://raw.githubusercontent.com/tinytiny911/4630/master/selfie.jpg"
       ],
-      "execution_count": 0,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,24 +94,43 @@
       "metadata": {
         "id": "yYNKyT54pkuR",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 374
+        },
+        "outputId": "0b8a9eca-4ccd-431c-bd81-6408362ecb3b"
       },
       "source": [
+        "import face_recognition\n",
         "import matplotlib.pyplot as plt\n",
         "import cv2\n",
         "import numpy as np\n",
-        "from PIL import Image\n",
+        "from PIL import Image, ImageDraw\n",
         "%matplotlib inline"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "RuntimeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-39-3c8781444441>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mface_recognition\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mPIL\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mImageDraw\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/face_recognition/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0m__version__\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'1.2.3'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mapi\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mload_image_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mface_locations\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_face_locations\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mface_landmarks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mface_encodings\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcompare_faces\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mface_distance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/face_recognition/api.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0mcnn_face_detection_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mface_recognition_models\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcnn_face_detector_model_location\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m \u001b[0mcnn_face_detector\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcnn_face_detection_model_v1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcnn_face_detection_model\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0mface_recognition_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mface_recognition_models\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mface_recognition_model_location\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mRuntimeError\u001b[0m: Error while calling cudaGetDevice(&the_device_id) in file /tmp/pip-wheel-66glv9rf/dlib/dlib/cuda/gpu_data.cpp:201. code: 100, reason: no CUDA-capable device is detected"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "6_dVeG2jr8ua",
         "colab_type": "code",
-        "outputId": "cd3167a7-0bf2-4894-9c5b-8b5cae8b71af",
+        "outputId": "ff4dab30-2bb8-4a41-ba8d-cf90f7c62a82",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
@@ -116,7 +143,7 @@
         "plt.imshow(show_img)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "display_data",
