--- a/facerecognition.ipynb
+++ b/facerecognition.ipynb
@@ -6,7 +6,7 @@
       "name": "facerecognition",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMxVkCQl4arjUMKM10I3Gwk",
+      "authorship_tag": "ABX9TyP0mYovp5HNddPNmInyx6v2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,38 +31,28 @@
       "metadata": {
         "id": "jo4H72yXovwp",
         "colab_type": "code",
-        "outputId": "07b46d80-c3f7-4146-9a7c-8bc178def3db",
+        "outputId": "f8837d83-b4f0-49d3-85ba-480cb7a81065",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 302
+          "height": 134
         }
       },
       "source": [
         "!pip install dlib\n",
         "!pip3 install face_recognition"
       ],
-      "execution_count": 1,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: dlib in /usr/local/lib/python3.6/dist-packages (19.18.0)\n",
-            "Collecting face_recognition\n",
-            "  Downloading https://files.pythonhosted.org/packages/1e/95/f6c9330f54ab07bfa032bf3715c12455a381083125d8880c43cbe76bb3d0/face_recognition-1.3.0-py2.py3-none-any.whl\n",
+            "Requirement already satisfied: face_recognition in /usr/local/lib/python3.6/dist-packages (1.3.0)\n",
+            "Requirement already satisfied: Click>=6.0 in /usr/local/lib/python3.6/dist-packages (from face_recognition) (7.1.2)\n",
+            "Requirement already satisfied: face-recognition-models>=0.3.0 in /usr/local/lib/python3.6/dist-packages (from face_recognition) (0.3.0)\n",
             "Requirement already satisfied: Pillow in /usr/local/lib/python3.6/dist-packages (from face_recognition) (7.0.0)\n",
             "Requirement already satisfied: dlib>=19.7 in /usr/local/lib/python3.6/dist-packages (from face_recognition) (19.18.0)\n",
-            "Collecting face-recognition-models>=0.3.0\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/cf/3b/4fd8c534f6c0d1b80ce0973d01331525538045084c73c153ee6df20224cf/face_recognition_models-0.3.0.tar.gz (100.1MB)\n",
-            "\u001b[K     |████████████████████████████████| 100.2MB 42kB/s \n",
-            "\u001b[?25hRequirement already satisfied: Click>=6.0 in /usr/local/lib/python3.6/dist-packages (from face_recognition) (7.1.2)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from face_recognition) (1.18.4)\n",
-            "Building wheels for collected packages: face-recognition-models\n",
-            "  Building wheel for face-recognition-models (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for face-recognition-models: filename=face_recognition_models-0.3.0-py2.py3-none-any.whl size=100566172 sha256=b5107bc5df56bc4d672441a738a86709db80595d89bb15d769ea86965342dcdf\n",
-            "  Stored in directory: /root/.cache/pip/wheels/d2/99/18/59c6c8f01e39810415c0e63f5bede7d83dfb0ffc039865465f\n",
-            "Successfully built face-recognition-models\n",
-            "Installing collected packages: face-recognition-models, face-recognition\n",
-            "Successfully installed face-recognition-1.3.0 face-recognition-models-0.3.0\n"
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from face_recognition) (1.18.4)\n"
           ],
           "name": "stdout"
         }
@@ -73,26 +63,26 @@
       "metadata": {
         "id": "MNGQE4sbo1MN",
         "colab_type": "code",
-        "outputId": "916a69fe-02e1-498a-e652-2cf0a91aaa0f",
+        "outputId": "9b4959de-0f72-450b-f381-bfdf158972d2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 202
         }
       },
       "source": [
-        "# First store some sample images in the folder 'images'\n",
-        "!mkdir -p images\n",
+        "# First store some sample images in the folder 'passport image'\n",
+        "!mkdir -p paspor_image\n",
         "# !cd images; wget -nc https://raw.githubusercontent.com/lovellbrian/ELEC4630/master/Images/obama.jpg\n",
         "# !cd images; wget -nc https://raw.githubusercontent.com/lovellbrian/ELEC4630/master/Images/biden.jpg\n",
         "# !cd images; wget -nc https://raw.githubusercontent.com/lovellbrian/ELEC4630/master/Images/two_people.jpg\n",
-        "!cd images; wget -nc https://raw.githubusercontent.com/tinytiny911/4630/master/selfie.jpg"
+        "!cd paspor_image; wget -nc https://raw.githubusercontent.com/tinytiny911/4630/master/selfie.jpg"
       ],
-      "execution_count": 2,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2020-05-24 14:10:17--  https://raw.githubusercontent.com/tinytiny911/4630/master/selfie.jpg\n",
+            "--2020-05-24 14:40:38--  https://raw.githubusercontent.com/tinytiny911/4630/master/selfie.jpg\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
@@ -101,7 +91,7 @@
             "\n",
             "\rselfie.jpg            0%[                    ]       0  --.-KB/s               \rselfie.jpg          100%[===================>]  55.84K  --.-KB/s    in 0.03s   \n",
             "\n",
-            "2020-05-24 14:10:17 (2.00 MB/s) - ‘selfie.jpg’ saved [57185/57185]\n",
+            "2020-05-24 14:40:39 (2.00 MB/s) - ‘selfie.jpg’ saved [57185/57185]\n",
             "\n"
           ],
           "name": "stdout"
@@ -131,20 +121,20 @@
       "metadata": {
         "id": "6_dVeG2jr8ua",
         "colab_type": "code",
-        "outputId": "0f14f583-be54-416b-d99f-d256a804272a",
+        "outputId": "82b8ba43-baab-4cf6-a2a1-9e372c688dc0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
         }
       },
       "source": [
-        "original_image='images/selfie.jpg'\n",
+        "original_image='paspor_image/selfie.jpg'\n",
         "image=cv2.imread(original_image)\n",
         "show_img=cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
         "plt.imshow(show_img)\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "display_data",
